      now show version comparison operators.  There was a mistake in the
      variable to print (dependency type rather than operator).

  * [cmdline] Show packages that will not be upgraded with verbose>0
    (Closes: #553577)

  * [curses] Use default string for Default-Grouping when config is empty
    (Closes: #405970)

  * [curses] Improve message when becoming root fails (Closes: #516854)

- User visible changes:

  * [cmdline] Minor improvements to help (Closes: #497136)

  * [curses] Show Origin and URI in pkg info screen
    (Closes: #294040, #457794, #513622, #611515)

  * Print useful message when package lists are out of date (Closes: #758764)

  * [curses] Allow to hide bottom half in several screens (Closes: #453853)

- Internal changes:

  * Change APT::Changelogs::Server (src/apt_options.cc) from
    http://packages.debian.org/changelogs to
    http://metadata.ftp-master.debian.org/changelogs -- it is the default for a
    few years already.

  * Add function to get the URI of a package version

  * Add function to get the Origin of a package version

- Documentation:

  * manpage:

    * Separate two elements in --add-user-tag-to description with comma, they
      were displayed together


[2015-10-16]
Version 0.7.4

- New features:

  * [curses] Show providers of virtual packages in "description" area
    (Closes: #103964)

    The description area (bottom half of the screen in the default view) was
    completely empty for virtual packages.  Now it shows the list of "real"
    packages providing the virtual package, in a nicely formatted list.

- Bug fixes:

  * Retrieve again long descriptions (Closes: #801460)

    When disabling the #ifdef of HAVE_DDTP, it was done the wrong way around and
    the old code (untested for many years) compiled fine and didn't cause
    errors, but didn't retrieve long descriptions anymore (it did for short
    ones).

  * Fix for circular dependencies in internal_mark_delete() (Closes: #801430)
