@@ -28,6 +28,9 @@ Version 0.7.5 UNRELEASED
 
   * [curses] Improve message when becoming root fails (Closes: #516854)
 
+  * [cmdline] Notify of 'Download Only' mode before confirmation to continue,
+    with verbose>0 (Closes: #804287)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
